fixed spacing issues

--- a/src/CSS/Home.css
+++ b/src/CSS/Home.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@600&display=swap');
 
-html, body {
-  /* overflow-x: hidden; */
-}
+/* html, body {
+  overflow-x: hidden;
+} */
 
 h1 {
   margin: 0;
